# remote-shutdown

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example  config.toml.example-mqtt  config.toml.example-mqtt-tls  config.toml.example-mqtt-ws  config.toml.example-mqtt-wss  config.toml.example-tcp
.github/workflows/: manual-compile.yml  rust-cross-compile.yml
src/: config.rs  config_mqtt.rs  config_tcp.rs  handler.rs  main.rs
