[package]
name = "remote-shutdown"
version = "0.1.0"
edition = "2024"

[dependencies]
config-file = "0.2.3"
rumqttc = { version = "0.24.0", features = ["websocket"] }
rustls-native-certs = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
system_shutdown = "4.0.1"
toml = "0.9.4"

[dev-dependencies]
unescaper = "0.1.6"
